@@ -72,10 +72,18 @@ if(!empty($_REQUEST['node_id']))
     $html .= "<input type='button' value='"._("Use these coordinates")."' onClick='setLocationInOriginalWindow();'>\n";
     $ui->addContent('main_area_middle', $html);
 
-    if($node->getGisLocation() !== null)
-    {
-        $lat = $node->getGisLocation()->getLatitude();
-        $long = $node->getGisLocation()->getLongitude();
+    if(($gisLocation = $node->getGisLocation()) !== null && $gisLocation->getLatitude() != null) {
+    }
+    elseif(($gisLocation = $node->getNetwork()->getGisLocation()) !== null && $gisLocation->getLatitude() != null) {
+    }
+    else {
+         $html .= "<div class='error'>"._("Error:  You need to set the GIS coordinates of the center of your network")."</div\n";
+        $gisLocation = null;
+    }
+    if($gisLocation !== null)
+    {//pretty_print_r($gisLocation);
+        $lat = $gisLocation->getLatitude();
+        $long = $gisLocation->getLongitude();
     }
     else
     {
@@ -93,8 +101,8 @@ if(!empty($_REQUEST['node_id']))
     $script .= "var current_marker_point = new GPoint($long, $lat);\n";
     $script .= "var current_marker = new GMarker(current_marker_point);\n";
     $script .= "map.addOverlay(current_marker);\n";
-    $gis_lat_name = "node_" . md5($node->getId()) ."_gis_latitude";
-    $gis_long_name = "node_" . md5($node->getId()) . "_gis_longitude";
+    $gis_lat_name = "node_" . $node->getId() ."_gis_latitude";
+    $gis_long_name = "node_" . $node->getId() . "_gis_longitude";
     $script .= "function setLocationInOriginalWindow() {\n";
     $script .= "  window.opener.document.getElementById(\"$gis_lat_name\").value = current_marker_point.y;\n";
     $script .= "  window.opener.document.getElementById(\"$gis_long_name\").value = current_marker_point.x;";
